# aptitude

./: .gitignore  .hgempty  BUGS  Doxyfile  Doxyfile.in  Makefile.am  Makefile.in  NEWS  README  README.CWIDGET  README.SMART-POINTERS  README.THREADS  README.i18n  SConstruct  TODO  aclocal.m4  aptitude-create-state-bundle  aptitude-create-state-bundle.1  aptitude-defaults.ar  aptitude-defaults.bs  aptitude-defaults.ca  aptitude-defaults.cs  aptitude-defaults.da  aptitude-defaults.de  aptitude-defaults.el  aptitude-defaults.es  aptitude-defaults.eu  aptitude-defaults.fi  aptitude-defaults.fr  aptitude-defaults.gl  aptitude-defaults.hu  aptitude-defaults.it  aptitude-defaults.ja  aptitude-defaults.km  aptitude-defaults.ku  aptitude-defaults.lt  aptitude-defaults.mr  aptitude-defaults.nb  aptitude-defaults.nl  aptitude-defaults.nn  (+37 more)
debian/: changelog  (+13 more)
doc/: Makefile.am  Makefile.in  SConscript  aptitude-db2latex.xsl  aptitude-fo.xsl  aptitude-html.xsl  aptitude-man.xsl  aptitude-txt.style  aptitude-txt.xsl  aptitude.css  configure.ac  fixup-text  html-to-text
doc/cs/: Makefile.am  Makefile.in  SConscript  aptitude.xml
doc/cs/images/: Makefile.in
doc/de/: Makefile.am  Makefile.in  SConscript  aptitude.xml  fixquotes  manpage.xml
doc/en/: Makefile.am  Makefile.in  SConscript  aptitude.xml  manpage.xml
doc/en/images/: Makefile.in
doc/es/: Makefile.am  Makefile.in  SConscript
doc/es/images/: Makefile.am  Makefile.in
doc/fi/: Makefile.am  Makefile.in  SConscript  aptitude.xml  fixman  manpage.xml
doc/fi/images/: Makefile.in
doc/fr/: Makefile.am  Makefile.in  SConscript  aptitude.xml  fixman  manpage.xml
doc/fr/images/: Makefile.in
doc/ja/: Makefile.am  Makefile.in  SConscript  aptitude-html-ja.xsl  aptitude-man-ja.xsl  aptitude.xml  manpage.xml
doc/ja/images/: Makefile.in
doc/pl/: Makefile.am  Makefile.in  fixman
doc/po4a/: Makefile.am  Makefile.in  po4a.cfg
doc/po4a/add_de/: Makefile.in
doc/po4a/add_es/: Makefile.in
doc/po4a/add_fr/: Makefile.in  addendum.1.fr
doc/po4a/add_pl/: Makefile.in  addendum.1.pl
doc/po4a/po/: Makefile.am  Makefile.in  aptitude.pot  de.po  es.po  fr.po  ja.po  pl.po
src/: Makefile.am  Makefile.in  SConscript  apt_config_treeitems.cc  apt_config_treeitems.h  apt_config_widgets.cc  apt_config_widgets.h  apt_info_tree.cc  apt_info_tree.h  apt_options.cc  apt_options.h  apt_undo_tree.h  aptitude.h  broken_indicator.cc  broken_indicator.h  changelog_parse.cc  changelog_parse.h  cmdline_parse.cc  cmdline_parse.h  defaults.cc  defaults.h  dep_item.cc  dep_item.h  desc_parse.cc  desc_parse.h  desc_render.cc  download_bar.cc  download_bar.h  download_item.cc  download_item.h  download_list.cc  download_list.h  download_screen.cc  download_screen.h  download_thread.cc  download_thread.h  edit_pkg_hier.cc  edit_pkg_hier.h  load_config.cc  load_config.h  (+58 more)
src/cmdline/: Makefile.am  Makefile.in  SConscript  cmdline_action.cc  cmdline_action.h  cmdline_changelog.cc  cmdline_changelog.h  cmdline_check_resolver.cc  cmdline_check_resolver.h  cmdline_clean.cc  cmdline_clean.h  cmdline_common.h  cmdline_do_action.cc  cmdline_do_action.h  cmdline_download.cc  cmdline_download.h  cmdline_download_progress_display.cc  cmdline_download_progress_display.h  cmdline_dump_resolver.cc  cmdline_dump_resolver.h  cmdline_extract_cache_subset.cc  cmdline_extract_cache_subset.h  cmdline_forget_new.cc  cmdline_forget_new.h  cmdline_moo.h  cmdline_progress.cc  cmdline_progress.h  cmdline_progress_display.cc  cmdline_progress_display.h  cmdline_progress_throttle.cc  cmdline_progress_throttle.h  cmdline_prompt.cc  cmdline_prompt.h  cmdline_resolver.cc  cmdline_resolver.h  cmdline_search.cc  cmdline_search.h  cmdline_search_progress.cc  cmdline_search_progress.h  cmdline_show.cc  (+25 more)
src/generic/: Makefile.am  Makefile.in  SConscript
src/gtk/: Makefile.am  Makefile.in  SConscript  aptitude.glade  area.cc  area.h  changelog.cc  changelog.h  dashboardtab.cc  dashboardtab.h  dependency_chains_tab.cc  dependency_chains_tab.h  description.cc  description.h  download.cc  download.h  dpkg_terminal.cc  dpkg_terminal.h  entitysummary.cc  entityview.cc  entityview.h  errortab.cc  filesview.cc  filesview.h  gui.cc  gui.h  info.cc  info.h  init.cc  mainwindow.cc  mainwindow.h  notify.cc  notify.h  packagestab.cc  packagestab.h  packagesview.cc  packagesview.h  pkgview.cc  pkgview.h  previewtab.cc  (+13 more)
src/mine/: Makefile.am  Makefile.in  SConscript  board.cc  board.h  cmine.cc  cmine.h
src/qt/: Makefile.am  Makefile.in  package_pool.cc  package_pool.h  qt_main.cc  tabs_manager.cc
src/vscreen/: Makefile.am  README.layout  columnify.cc  columnify.h  curses++.cc  curses++.h  fragment.cc  fragment.h  fragment_cache.cc  fragment_cache.h  fragment_contents.h  ref_ptr.h  testvscreen.cc  transcode.cc  transcode.h  vs_bin.cc  vs_bin.h  vs_button.cc  vs_button.h  vs_center.cc  vs_center.h  vs_container.cc  vs_container.h  vs_editline.cc  vs_editline.h  vs_frame.cc  vs_frame.h  vs_label.cc  vs_label.h  vs_layout_item.cc  vs_layout_item.h  vs_menu.cc  vs_menu.h  vs_menubar.cc  vs_menubar.h  vs_minibuf_win.cc  vs_minibuf_win.h  vs_multiplex.cc  vs_multiplex.h  vs_pager.cc  (+34 more)
tests/: Makefile.am  Makefile.in  SConscript  boost_test_main.cc  cppunit_test_main.cc  main.cc  test_choice.cc  test_choice_set.cc  test_cmdline_download_progress_display.cc  test_cmdline_download_status_display.cc  test_cmdline_progress_display.cc  test_cmdline_search_progress.cc  test_dense_setset.cc  test_dynamic_list.cc  test_dynamic_set.cc  test_eassert.cc  test_enumerator.cc  test_file_cache.cc  test_incremental_expression.cc  test_logging.cc  test_matching.cc  test_misc.cc  test_parsers.cc  test_promotion_set.cc  test_resolver.cc  test_resolver_costs.cc  test_resolver_hints.cc  test_search_input_controller.cc  test_setset.cc  test_sqlite.cc  test_tags.cc  test_teletype_mock.cc  test_temp.cc  test_terminal_mock.cc  test_threads.cc  test_transient_message.cc  test_wtree.cc
tools/resolver-visualize/: Dot.hs  DotRender.hs  Main.hs  TestLoadTime.hs  Types.hs  resolver-visualize.cabal  resolver-visualize.glade
(+371 files in other folders)
